--- a/aboutme.html
+++ b/aboutme.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="EN">
 
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
   <!-- Open Graph tags -->
-  <meta property="og:title" content="L RMN - Bio 6">
+  <meta property="og:title" content="L RMN">
   <meta property="og:description" content="This is a free (and easy to use) alternative to linktree">
-  <meta property="og:image" content="https://res.cloudinary.com/lrmn/image/upload/v1685431439/lrmn.dev/linktree-og_kkymju.png">
+  <meta property="og:image"
+    content="https://res.cloudinary.com/lrmn/image/upload/v1685431439/lrmn.dev/linktree-og_kkymju.png">
 
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -36,7 +37,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/avatar.png" />
+  <link rel="icon" type="image/png" href="images/avatar2.png" />
 
 </head>
 
@@ -55,26 +56,36 @@
 
         <!-- Page Information -->
         <p>
-          <b><p>I'm just your average with a dabbling of coding knowledge and absolutely zero experience in 
-            <a href="https://lrmn-vp.is-a.fun" target="_blank" rel="noopener">virtual photography</a>. 
-            When I'm not scrolling through cat videos on Instagram, I like to pretend to work on projects, 
-            hang out with people who barely tolerate me, read books (mostly for the pictures), listening music, go on adventures (to the bed and back), 
-            and daydream about new ideas that I will likely never act on.</p></b>
-          <b><p>Despite my general cluelessness, I've always been curious about the world. As a kid, 
-            I loved taking things apart and pretending to know how to put them back together. 
-            While my endeavors in coding and the virtual photography have been underwhelming at best, 
-            I'm confident that my boundless enthusiasm and lack of expertise will carry me to new heights (or maybe just to the coffee shop).</p></b>
-          <b><p>So if you're looking for someone who is mediocre at everything and has a knack for making bad jokes, I'm your guy!</p></b>
+          <b>
+            <p>I'm just your average with a dabbling of coding knowledge and absolutely zero experience in
+              <a href="https://lrmn-vp.is-a.fun" target="_blank" rel="noopener">virtual photography</a>.
+              When I'm not scrolling through cat videos on Instagram, I like to pretend to work on projects,
+              hang out with people who barely tolerate me, read books (mostly for the pictures), listening music, go on
+              adventures (to the bed and back),
+              and daydream about new ideas that I will likely never act on.
+            </p>
+          </b>
+          <b>
+            <p>Despite my general cluelessness, I've always been curious about the world. As a kid,
+              I loved taking things apart and pretending to know how to put them back together.
+              While my endeavors in coding and the virtual photography have been underwhelming at best,
+              I'm confident that my boundless enthusiasm and lack of expertise will carry me to new heights (or maybe
+              just to the coffee shop).</p>
+          </b>
+          <b>
+            <p>So if you're looking for someone who is mediocre at everything and has a knack for making bad jokes, I'm
+              your guy!</p>
+          </b>
           <br />
           <br />
 
-          <footer>
-            <div>
-                <p align="center">&copy; 2023 L RMN. All rights reserved.</p>
-            </div>
+        <footer>
+          <div>
+            <p align="center">&copy; 2023 L RMN. All rights reserved.</p>
+          </div>
         </footer>
+      </div>
     </div>
-  </div>
 </body>
 
 </html>
